tests/rosetta/out/Fortran/call-a-function-9.error
gfortran: exit status 1
/tmp/call-a-function-9.f90:33:5:

   33 |     a = ab(((0)+1))
      |     1
Error: Unclassifiable statement at (1)
/tmp/call-a-function-9.f90:36:11:

   36 |     d = g(a,cb)
      |           1
Error: Symbol ‘a’ at (1) has no IMPLICIT type
/tmp/call-a-function-9.f90:37:13:

   37 |     e = g(d,b)
      |             1
Error: Symbol ‘b’ at (1) has no IMPLICIT type
/tmp/call-a-function-9.f90:18:14:

   18 |     res = (/0,0.0/)
      |              1
Error: Element in INTEGER(4) array constructor at (1) is REAL(4)
